# bulletins

./: README.md  pyproject.toml
src/bulletin/: __init__.py
